tests/neg-macros/annot-mod-top-method-add-top-val/Test_2.scala
@addTopLevelValOutsidePackageObject // error
def foo = 1

@addTopLevelValOutsidePackageObject // error
val bar = 1
